<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cardNumberTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/e_commerce_payment_credit_card_number"
        app:errorIconDrawable="@drawable/ic_error_red_18dp"
        app:hintAnimationEnabled="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardNumberTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789 "
            android:inputType="number|textVisiblePassword"
            android:maxLength="19"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cardNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="8dp"
        android:hint="@string/e_commerce_payment_credit_card_name"
        app:errorIconDrawable="@drawable/ic_error_red_18dp"
        app:errorTextAppearance="@style/error_appearance"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardNameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="#455154"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expirationDateTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/e_commerce_payment_credit_card_expire_date"
            app:errorIconDrawable="@drawable/ic_error_red_18dp"
            app:errorTextAppearance="@style/error_appearance"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expirationDateTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:lines="1"
                android:maxLength="5"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#455154"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cvvTextInputLayout"
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_weight="6"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:hint="@string/e_commerce_payment_credit_card_security_code"
            android:layout_marginStart="8dp"
            app:errorIconDrawable="@drawable/ic_error_red_18dp"
            app:errorTextAppearance="@style/error_appearance"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cvvTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:maxLength="3"
                android:singleLine="true"
                android:textColorHint="#455154"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>