<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_header_layout"
        android:layout_marginTop="-38dp"
        android:background="@drawable/layout_custom_body_shape">

        <com.shopiroller.views.legacy.ShopirollerTextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:gravity="center"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/your_discount_code"
            android:textStyle="bold"
            app:sColorType="primary"
            app:sSizeType="head_one" />

        <androidx.cardview.widget.CardView
            android:id="@+id/coupon_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardElevation="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/title_text_view" >

                <EditText
                    android:id="@+id/coupon_edit_text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:hint="@string/discount_code"
                    android:textStyle="normal"
                    android:background="@color/light_grey"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="14sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.cardview.widget.CardView>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coupon_card_view"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="25dp"
            android:clipChildren="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <com.shopiroller.views.legacy.ShopirollerButton
                android:id="@+id/negative_button"
                android:layout_width="200dp"
                android:layout_height="44dp"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:layout_marginEnd="15dp"
                app:sButtonBackgroundColor="@color/white"
                app:sButtonHasRadius="true"
                app:sButtonTextColor="#878787"
                app:sButtonText="@string/mobiroller_dialog_negative_button"/>

            <com.shopiroller.views.legacy.ShopirollerButton
                android:id="@+id/apply_discount"
                android:layout_width="200dp"
                android:layout_marginTop="5dp"
                android:layout_height="44dp"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                app:sButtonBackgroundColor="#F4F6F6"
                app:sButtonHasRadius="true"
                app:sButtonTextColor="#000000"
                app:sButtonText="@string/apply_discount"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dialog_header_layout"
        android:layout_width="76dp"
        android:layout_centerHorizontal="true"
        android:layout_height="76dp"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/dialog_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:background="@drawable/layout_custom_header_shape">

            <RelativeLayout
                android:id="@+id/icon_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_custom_header_shape"
                android:backgroundTint="#f8e7d8"
                android:gravity="center">

                <ImageView
                    android:id="@+id/icon_image_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:tint="@color/black"
                    app:srcCompat="@drawable/ic_coupon" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>