<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.shopiroller.views.legacy.ShopirollerToolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/empty_layout"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.shopiroller.views.legacy.ShopirollerEmptyView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/empty_view"
            app:sBackgroundImageTintColor="#f5d8d8"
            app:sDescription="@string/e_commerce_my_orders_no_order_description"
            app:sEmptyIcon="@drawable/ic_no_order_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:sTitle="@string/e_commerce_my_orders_no_order_title" />

        <com.shopiroller.views.legacy.ShopirollerButton
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toBottomOf="@+id/empty_view"
            app:layout_constraintRight_toRightOf="parent"
            app:sButtonColorType="primary"
            android:id="@+id/start_shopping_button"
            app:sButtonText="@string/e_commerce_shopping_cart_empty_view_start_shopping_button"
            app:sButtonHasRadius="true"
            android:layout_marginTop="58dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="44dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/preview_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableLeft="@drawable/ic_info_outline_white_24dp"
            android:drawablePadding="10dp"
            android:drawableTint="#28429C"
            android:text="Bu ekranda yer alan veriler örnek olarak gösterilmektedir. Uygulamanızda kullanıcıya ait veriler gösterilecektir."
            android:textColor="#28429C" />

    </androidx.cardview.widget.CardView>

    <com.shopiroller.views.legacy.ShopirollerSwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preview_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingStart="7.5dp"
            android:paddingTop="12.5dp"
            android:paddingEnd="7.5dp" />
    </com.shopiroller.views.legacy.ShopirollerSwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>